This is modified for js image properties

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,6 +168,10 @@
 
 
     <script src="{% static 'app.js' %}"></script>
+
+    <script>
+        const staticurl = "{{ STATIC_URL }}";
+    </script>
     
 
 </body>
